# math_cli

./: .coveragerc  AGENTS.md  CHANGELOG.md  Makefile  PHASE1_SUMMARY.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  PHASE4_PLAN.md  PHASE5_PLAN.md  README.md  REMAINING_WORK_PLAN.md  install.sh  math_cli.py  math_cli_orig.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  update.sh
.tmp/: test_custom_plugin_discovery_acurrent
MathCLI-iOS/: .gitignore  DEVELOPMENT_WORKFLOW.md  IMPLEMENTATION_ROADMAP.md  PROJECT_SUMMARY.md  Package.swift  QUICK_REFERENCE.md  README.md  WORKFLOW_SETUP_COMPLETE.md  XCODE_SETUP_GUIDE.md
cli/: autocompletion.py  command_engine.py  command_parser.py  full_screen_tui.py  help_system.py  interactive_app.py  interactive_mode.py  keybindings.py  multiline_input.py  script_runner.py  tui_config.py
core/: base_operations.py  plugin_manager.py  user_functions.py  variables.py
docs/: Core_Plugins.md  PRD for Math cli.md  class-diagram.md  cli-startup.md  command-execution.md  history-flow.md  interactive-mode.md  package-structure.md  plugin-loading.md  plugin-system.md  user-interaction.md
plugins/: advanced_math.py  calculus_plugin.py  combinatorics.py  complex_math.py  complex_operations_plugin.py  constants.py  control_flow_plugin.py  conversions.py  core_math.py  data_analysis_plugin.py  data_transform_plugin.py  export_plugin.py  extended_trig.py  function_plugin.py  geometry.py  matrix_operations_plugin.py  number_theory_plugin.py  plotting_plugin.py  plugin_template.py  script_plugin.py  statistics.py  variable_plugin.py  (+1 more)
(+82 files in other folders)
