[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "math-cli"
version = "0.1.0"
description = "A modular command-line calculator with plugin support for mathematical operations."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "rich>=14.0.0",
    "prompt_toolkit>=3.0.0",
    "psutil>=5.9.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "sympy>=1.12",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
math-cli = "math_cli:main"

[tool.setuptools]
py-modules = ["math_cli"]
packages = ["cli", "core", "plugins", "utils"]
